themes/particlex/source/css/main.css
/* ... */
#search-bar {
    margin-bottom: 50px;
    z-index: 1000;
}
#timeline-wrap {
    display: flex;
    flex-direction: column-reverse;
}
* {
    margin: 0;
    padding: 0;
    position: relative;
    scrollbar-color: #8ab5ff #e6efff;
    scrollbar-width: thin;
    word-wrap: break-word;
}
.article {
    font-size: 15px;
    margin: auto;
    margin-top: 100px;
    padding: 20px;
}
.article .content {
    margin: 50px 0;
}
.article .info .date {
    color: #5c6b72;
    display: inline-block;
    margin-right: 10px;
}
.code-content {
    font-size: 13px;
    line-height: 2;
    overflow-x: auto;
    overflow-y: hidden;
    padding: 50px 30px 20px;
    white-space: pre;
    width: 100%;
    box-sizing: border-box;
}
.comment iframe,
body::-webkit-scrollbar-track {
    border-radius: 0;
}
.content {
    transition: opacity 0.25s;
}
.content img,
.content video,
.content audio,
.content iframe {
    display: block;
    margin: 15px auto;
    max-width: 75%;
}
.copycode {
    color: #5c6b72;
    position: absolute;
    right: 0;
    top: 0;
}
.copycode i {
    padding: 15px;
    position: absolute;
    right: 0;
    top: 0;
    transition: transform 0.25s;
}
.copycode.copied i {
    transform: scale(1.25);
}
.copycode.copied i:first-child,
.copycode:not(.copied) i:last-child {
    opacity: 0;
}
.fade-enter-active,
.fade-leave-active {
    transition: opacity 0.3s;
}
.fade-enter-from,
.fade-leave-to {
    opacity: 0;
}
.hljs-ln-code {
    padding-left: 20px !important;
    width: 100%;
    white-space: pre;
}
.hljs-ln-numbers {
    border-right: 1px solid #ccc;
    color: #ccc;
    padding-right: 10px !important;
    text-align: right;
    vertical-align: top;
}
.icon {
    color: #5c6b72;
    margin-right: 5px;
}
.input {
    background: #f6f8fa;
    border: 1px solid #d0d7de;
    border-radius: 50px;
    box-sizing: border-box;
    color: #000;
    display: block;
    font-size: 15px;
    height: 50px;
    text-indent: 20px;
    transition: background 0.25s, border 0.25s, box-shadow 0.25s;
    width: 100%;
}
.input:focus {
    background: #fff;
    border-color: #0969da;
    box-shadow: 0 0 0 3px #0969da4d;
    outline: none;
}
.input:hover {
    background: #fff;
}
.into-enter-active {
    transition: opacity 0.5s, transform 0.5s;
}
.into-enter-from {
    opacity: 0;
    transform: scale(1.1);
}
.katex {
    white-space: normal !important;
}
.language {
    background: linear-gradient(to right, #ed6ea0 0%, #ec8c69 100%);
    border-radius: 0 0 10px 10px;
    box-shadow: 1px 1px 0.75rem #ed6ea14d;
    color: #fff;
    font-size: 12px;
    font-weight: bold;
    left: 30px;
    padding: 10px 15px;
    position: absolute;
    top: 0;
}
.page-num,
.icon-link a,
.friend-link a {
    transition: background 0.25s, color 0.25s;
}
.page-num:hover,
.icon-link a:hover,
.friend-link a:hover,
.categories-tags a:hover,
.go-post:hover {
    opacity: 1;
}
.slide-enter-active,
.slide-leave-active {
    transition: margin-top 0.3s, opacity 0.3s;
}
.slide-enter-from,
.slide-leave-to {
    margin-top: -300px;
    opacity: 0;
}
.timeline {
    margin-bottom: 30px;
    transition: margin-top 0.5s, opacity 0.3s, visibility 0.3s;
}
.timeline-content {
    background: #fff;
    border: 1px solid #0002;
    border-radius: 3px;
    margin-left: 17.5px;
    padding: 24px;
    transition: box-shadow 0.5s;
}
.timeline-content:hover {
    box-shadow: 0 2px 8px #00000017;
}
.timeline-tail {
    background: #fff;
    border: 2px solid #a5c2f5;
    border-radius: 50%;
    height: 7px;
    position: absolute;
    width: 7px;
}
::-webkit-scrollbar {
    height: 12px;
    width: 12px;
}
::-webkit-scrollbar-thumb {
    background: #8ab5ff
        linear-gradient(
            45deg,
            #fff6 25%,
            transparent 25%,
            transparent 50%,
            #fff6 50%,
            #fff6 75%,
            transparent 75%,
            transparent
        );
    border: 3px solid #e6efff;
    border-radius: 100px;
}
::-webkit-scrollbar-track {
    background: #e6efff;
    border-radius: 100px;
}
::selection {
    background-color: #3392ff2a;
    color: unset;
}
a {
    color: #66afef;
    text-decoration: none;
}
a:hover,
.content .copycode:hover {
    opacity: 0.8;
}
audio,
button,
iframe,
img,
video,
#home-head,
#menu,
.categories-tags a,
.copycode,
.friend-link a,
.go-post,
.hljs-ln-numbers,
.icon-link a,
.katex,
.language,
.page-current {
    user-select: none;
}
b,
strong {
    font-weight: bold;
    line-height: 2.5;
}
blockquote {
    background: #d9e8ff6b;
    border-left: 3px solid #1e3e3f;
    border-radius: 3px;
    margin: 15px 0;
    overflow: auto;
    padding: 0 15px;
}
body {
    background: #f6f8fa;
    color: #1e3e3f;
    font: 500 14px Lexend, "Noto Sans SC", sans-serif;
    overflow-x: hidden;
    width: 100%;
}
code {
    background: #bddcf76b;
    border-radius: 4px;
    line-height: 2.5;
    padding: 4px 8px;
}
h1,
h2,
h3,
h4,
h5,
h6 {
    color: #1e3e3f;
    font-weight: bold;
    margin: 15px 0;
    word-break: keep-all;
}
h1 {
    font-size: 30px;
}
h2 {
    font-size: 27px;
}
h3 {
    font-size: 24px;
}
h4 {
    font-size: 21px;
}
h5 {
    font-size: 18px;
}
h6 {
    font-size: 15px;
}
hr {
    border-style: dashed none none;
    border-width: 1.5px;
}
img,
video,
audio,
iframe {
    border-radius: 10px;
}
mark {
    background: #fff13360;
    border-radius: 4px;
    color: unset;
    line-height: 2.5;
    padding: 4px 8px;
}
p,
ul,
ol {
    line-height: 1.7;
    margin: 15px 0;
}
pre {
    border: 1px solid #ebeef5;
    border-radius: 15px;
    box-shadow: 0 2px 12px 0 #0000001a;
    margin: 25px 0;
    overflow: hidden;
    white-space: normal;
    width: 100%;
    box-sizing: border-box;
}
pre,
code,
.hljs,
.input,
.language {
    font-family: "Fira Code", "Noto Sans SC", monospace;
}
.hljs-ln {
    width: 100%;
    table-layout: fixed;
}
table:not(.hljs-ln) {
    margin: 15px 0;
}
table:not(.hljs-ln) td:nth-child(even) {
    background: #c7e0fb4d;
}
/* ... */

